--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -39,7 +39,8 @@ h6 {
   background: var(--mainYellow) !important;
   color: var(--mainDark) !important;
 }
-.default-background {
+.default-background,
+.about-background {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -51,13 +52,6 @@ h6 {
 }
 .about-background {
   min-height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(rgba(255, 158, 9, 0.5), rgba(255, 158, 9, 0.5));
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
 }
 .menu {
   background: var(--mainGrey);
